--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-17 18:37+0700\n"
-"PO-Revision-Date: 2012-06-14 07:42+0000\n"
+"PO-Revision-Date: 2012-06-18 06:23+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-18 05:21+0000\n"
-"X-Generator: Launchpad (build 15419)\n"
+"X-Launchpad-Export-Date: 2012-06-19 04:42+0000\n"
+"X-Generator: Launchpad (build 15435)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -6176,7 +6176,7 @@ msgstr "Benarkan paparan distribusi untuk pulsar"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:70
 msgid "Exoplanets"
-msgstr ""
+msgstr "Eksoplanet"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:73
 msgid ""
@@ -6186,34 +6186,34 @@ msgstr ""
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:151
 msgid "Exoplanets configuration window"
-msgstr ""
+msgstr "Tetingkap konfigurasi eksoplanet"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:173
 #: plugins/Exoplanets/src/Exoplanet.cpp:189
 msgid "Mass"
-msgstr ""
+msgstr "Jisim"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:177
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
 msgid "Radius"
-msgstr ""
+msgstr "Jejari"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:181
 #, qt-format
 msgid "Effective temperature: %1 K"
-msgstr ""
+msgstr "Suhu efektif: %1 K"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:187
 msgid "Exoplanet"
-msgstr ""
+msgstr "Eksoplanet"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:188
 msgid "Period"
-msgstr ""
+msgstr "Tempoh"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:188
 msgid "days"
-msgstr ""
+msgstr "hari"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:189
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
@@ -6230,19 +6230,19 @@ msgstr "AU"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:192
 msgid "Eccentricity"
-msgstr ""
+msgstr "Ketakpusatan"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:193
 msgid "Inclination"
-msgstr ""
+msgstr "Kecondongan"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:194
 msgid "Angle Distance"
-msgstr ""
+msgstr "Jarak Sudut"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
-msgstr ""
+msgstr "Pemalam Eksoplanet"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:110
 #, qt-format
@@ -6250,22 +6250,24 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from \"%1The Extrasolar Planets Encyclopaedia%2\""
 msgstr ""
+"Pemalam ini plotkan kedudukan bintang dengan eksoplanetnya. Data eksoplanet "
+"diambil dari  \"%1The Extrasolar Planets Encyclopaedia%2\""
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:183
 msgid "Exoplanets is updated"
-msgstr ""
+msgstr "Eksopanet telah dikemaskini"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:233
 msgid "Exoplanets Configuration"
-msgstr ""
+msgstr "Konfigurasi Eksoplanet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:234
 msgid "Exoplanets Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurasi Pemalam Eksoplanet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:236
 msgid "Update exoplanets data from Internet"
-msgstr ""
+msgstr "Kemaskini data eksoplanet dari Internet"
 
 #~ msgid "Set Location "
 #~ msgstr "Tentukan Lokasi "
