Launchpad automatic translations update.

--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-17 18:37+0700\n"
-"PO-Revision-Date: 2012-06-20 21:24+0000\n"
+"PO-Revision-Date: 2012-06-21 14:39+0000\n"
 "Last-Translator: Miroslav Remák <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-21 05:16+0000\n"
-"X-Generator: Launchpad (build 15435)\n"
+"X-Launchpad-Export-Date: 2012-06-22 04:34+0000\n"
+"X-Generator: Launchpad (build 15461)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -3264,7 +3264,7 @@ msgstr "Kruhové zorné pole"
 
 #: src/ui_configurationDialog.h:871
 msgid "Hide other constellations when you click one"
-msgstr "Skryť ostatné súhvezdia keď raz kliknete"
+msgstr "Skryť ostatné súhvezdia, keď kliknete na jedno z nich"
 
 #: src/ui_configurationDialog.h:873
 msgid "Select single constellation"
@@ -4174,7 +4174,7 @@ msgstr ""
 
 #: plugins/Satellites/src/Satellite.cpp:296
 msgid "The satellite is not visible"
-msgstr ""
+msgstr "Satelit nie je viditeľný"
 
 #: plugins/Satellites/src/Satellite.cpp:322
 #, qt-format
