--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-17 18:37+0700\n"
-"PO-Revision-Date: 2012-05-05 09:12+0000\n"
+"PO-Revision-Date: 2012-06-21 22:27+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-18 05:16+0000\n"
-"X-Generator: Launchpad (build 15419)\n"
+"X-Launchpad-Export-Date: 2012-06-22 04:34+0000\n"
+"X-Generator: Launchpad (build 15461)\n"
 "X-Poedit-Country: BELARUS\n"
 "Language: be\n"
 "X-Poedit-Language: Belarusian\n"
@@ -535,15 +535,15 @@ msgstr "Калі сцэнар выконваецца"
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "Спыніць сцэнар, які выконваецца"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:151 src/gui/StelGui.cpp:152
 msgid "Pause script execution"
-msgstr ""
+msgstr "Прыпыніць выконваньне сцэнара"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:153
 msgid "Resume script execution"
-msgstr ""
+msgstr "Працягнуць выконваньне сцэнара"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:148
 msgid "Slow down the script execution rate"
@@ -3887,7 +3887,7 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:417
 msgid "Oculars Plug-in"
-msgstr ""
+msgstr "Дадатак «Акуляр»"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:418
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:259
@@ -3900,7 +3900,7 @@ msgstr "Вэрсія"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:423
 msgid "Overview"
-msgstr ""
+msgstr "Агляд"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:425
 msgid ""
@@ -3943,7 +3943,7 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:432
 msgid "Hot Keys"
-msgstr ""
+msgstr "«Гарачыя» клявішы"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:433
 msgid "The plug-in's key bindings can be edited in the General Tab."
@@ -3952,7 +3952,7 @@ msgstr ""
 #: plugins/Oculars/src/gui/OcularDialog.cpp:445
 #: plugins/Oculars/src/gui/OcularDialog.cpp:450
 msgid "[no key defined]"
-msgstr ""
+msgstr "[клявіша ня вызначаная]"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:454
 msgid "Switches on/off the ocular overlay."
@@ -4091,7 +4091,7 @@ msgstr "Перакул па вэртыкалі"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:263
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:245
 msgid "About plugin"
-msgstr ""
+msgstr "Пра дадатак"
 
 #: plugins/Satellites/src/Satellites.cpp:65
 #: plugins/Satellites/src/ui_satellitesDialog.h:705
@@ -5785,6 +5785,8 @@ msgid ""
 "A plugin that shows some historical supernovae brighter than 10 visual "
 "magnitude."
 msgstr ""
+"Дадатак, які паказвае некаторыя гістарычныя звышновыя, ярчэйшыя за 10 бачную "
+"велічыню."
 
 #: plugins/Supernovae/src/Supernovae.cpp:143
 msgid "Historical Supernovae configuration window"
@@ -5801,7 +5803,7 @@ msgstr "Тып звышновай: %1"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:106
 msgid "Historical Supernovae Plug-in"
-msgstr ""
+msgstr "Дадатак гістарычных звышновых"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:111
 msgid ""
@@ -5812,10 +5814,16 @@ msgid ""
 "1937C (21 August), SN 1972E (8 May), SN 1987A (24 February) and SN 2011FE "
 "(13 September)."
 msgstr ""
+"Дадатак, які паказвае некаторыя гістарычныя звышновыя, ярчэйшыя за 10 бачную "
+"велічыню: SN 185A (7 сьнежня), SN 386A (24 красавіка), SN 1006A (29 "
+"красавіка), SN 1054A (3 ліпеня), SN 1181A (4 жніўня), SN 1572A (5 "
+"лістапада), SN 1604A (8 кастрычніка), SN 1680A (15 жніўня), SN 1885A (17 "
+"жніўня), SN 1895B (5 ліпеня), SN 1937C (21 жніўня), SN 1972E (8 траўня), SN "
+"1987A (24 лютага) і SN 2011FE (13 верасьня)."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:113
 msgid "Light curves"
-msgstr ""
+msgstr "Крывыя свяцільнасць"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:114
 #, qt-format
@@ -5828,7 +5836,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:116
 msgid "Acknowledgments"
-msgstr ""
+msgstr "Падзякі"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:117
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:121
@@ -5838,16 +5846,16 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:119
 msgid "Sergei Blinnikov"
-msgstr ""
+msgstr "Сяргею Бліньнікаву"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:121
 msgid "Institute for Theoretical and Experimental Physics"
-msgstr ""
+msgstr "Інстытуту тэарэтычнай і экспэрымэнтальнай фізыкі"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:122
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:126
 msgid "in Russia"
-msgstr ""
+msgstr "у Расеі"
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:133
@@ -5863,11 +5871,11 @@ msgstr ""
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:170
 #, qt-format
 msgid "Next update: %1 days"
-msgstr ""
+msgstr "Наступнае абнаўленьне: %1 дзён"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:197
 msgid "Historical supernovae is updated"
-msgstr ""
+msgstr "Гістарычныя звышновыя абноўленыя"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:233
 msgid "Historical Supernovae Configuration"
@@ -5881,13 +5889,13 @@ msgstr ""
 #: plugins/Quasars/src/ui_quasarsDialog.h:252
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:252
 msgid "Update catalog from Internet"
-msgstr ""
+msgstr "Абнавіць каталёґ зь Сеціва"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:239
 #: plugins/Quasars/src/ui_quasarsDialog.h:255
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:255
 msgid "Update frequency (days):"
-msgstr ""
+msgstr "Часьціня абнаўленьняў (у днях):"
 
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:240
 #: plugins/Quasars/src/ui_quasarsDialog.h:256
@@ -5925,7 +5933,7 @@ msgstr "Z (чырвоны зрух): %1"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:108
 msgid "Quasars Plug-in"
-msgstr ""
+msgstr "Дадатак «Квазары»"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:114
 msgid ""
@@ -5936,7 +5944,7 @@ msgstr ""
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:116
 msgid "Veron+ 2010"
-msgstr ""
+msgstr "Veron+ 2010"
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:128
@@ -5949,7 +5957,7 @@ msgstr ""
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:198
 msgid "Quasars is updated"
-msgstr ""
+msgstr "Квазары абноўленыя"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:249
 msgid "Quasars Configuration"
@@ -6004,12 +6012,12 @@ msgstr ""
 #. TRANSLATORS: Unit of measure for distance - centimeters
 #: plugins/Pulsars/src/Pulsar.cpp:152
 msgid "cm"
-msgstr ""
+msgstr "см"
 
 #. TRANSLATORS: Unit of measure for distance - parsecs
 #: plugins/Pulsars/src/Pulsar.cpp:155
 msgid "pc"
-msgstr ""
+msgstr "парс"
 
 #: plugins/Pulsars/src/Pulsar.cpp:161
 #, qt-format
@@ -6019,23 +6027,24 @@ msgstr ""
 #: plugins/Pulsars/src/Pulsar.cpp:165
 #, qt-format
 msgid "Binary period of pulsar: %1 days"
-msgstr ""
+msgstr "Бінарны пэрыяд пульсара: %1 дзён"
 
 #: plugins/Pulsars/src/Pulsar.cpp:169
 #, qt-format
 msgid "Eccentricity: %1"
-msgstr ""
+msgstr "Эксцэнтрысытэт: %1"
 
 #. TRANSLATORS: Unit of measure for annual parallax - milliarcseconds
 #: plugins/Pulsars/src/Pulsar.cpp:174
 #, qt-format
 msgid "Annual parallax: %1 mas"
-msgstr ""
+msgstr "Гадавы паралякс: %1 mas"
 
 #: plugins/Pulsars/src/Pulsar.cpp:178
 #, qt-format
 msgid "Distance based on electron density model: %1 kpc (%2 ly)"
 msgstr ""
+"Адлегласьць з мадэлі шчыльнасьці электронаў: %1 кпарс (%2 сьв. гадоў)"
 
 #: plugins/Pulsars/src/Pulsar.cpp:182
 #, qt-format
@@ -6063,7 +6072,7 @@ msgstr "мЯн"
 #: plugins/Pulsars/src/Pulsar.cpp:222
 #, qt-format
 msgid "Notes: %1"
-msgstr ""
+msgstr "Нататкі: %1"
 
 #: plugins/Pulsars/src/Pulsar.cpp:291
 msgid ""
@@ -6072,7 +6081,7 @@ msgstr ""
 
 #: plugins/Pulsars/src/Pulsar.cpp:296
 msgid "has one or more binary companions"
-msgstr ""
+msgstr "з адным ці большай колькасьцю бінарных кампаньёнаў"
 
 #: plugins/Pulsars/src/Pulsar.cpp:301
 msgid "with pulsed emission from radio to infrared or higher frequencies"
@@ -6098,7 +6107,7 @@ msgstr ""
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:108
 msgid "Pulsars Plug-in"
-msgstr ""
+msgstr "Дадатак «Пульсары»"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:114
 #, qt-format
@@ -6107,42 +6116,46 @@ msgid ""
 "Hobbs, G. B., Teoh, A. & Hobbs, M., Astron. J., 129, 1993-2006 (2005) "
 "(%1astro-ph/0412641%2))."
 msgstr ""
+"Зьвесткі пра пульсары атрыманыя з «Каталёґу пульсараў Аўстралійскай "
+"нацыянальнай абсэрваторыі» («The ATNF Pulsar Catalogue») (Manchester, R. N., "
+"Hobbs, G. B., Teoh, A. & Hobbs, M., Astron. J., 129, 1993-2006 (2005) "
+"(%1astro-ph/0412641%2))."
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:118
 msgid "Note"
-msgstr ""
+msgstr "Заўвага"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:119
 msgid "pulsar identifiers have the prefix 'PSR'"
-msgstr ""
+msgstr "вызначнікі пульсараў маюць прэфікс «PSR»"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:120
 msgid "Acknowledgment"
-msgstr ""
+msgstr "Падзякі"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:123
 msgid "Vladimir Samodourov"
-msgstr ""
+msgstr "Уладзімер Самадураў"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:125
 msgid "Pushchino Radio Astronomy Observatory"
-msgstr ""
+msgstr "Пушчынская радыёастранамічная абсэрваторыя"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:128
 msgid "Maciej Serylak"
-msgstr ""
+msgstr "Мацей Сэрылак"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:130
 msgid "Nancay Radioastronomical Observatory"
-msgstr ""
+msgstr "Радыёастранамічная абсэрваторыя Нансэ"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:131
 msgid "in France"
-msgstr ""
+msgstr "у Францыі"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:212
 msgid "Pulsars is updated"
-msgstr ""
+msgstr "Пульсары абноўленыя"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:249
 msgid "Pulsars Configuration"
@@ -6162,13 +6175,16 @@ msgstr ""
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:70
 msgid "Exoplanets"
-msgstr ""
+msgstr "Экзаплянэты"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:73
 msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from the 'Extrasolar Planets Encyclopaedia' at exoplanet.eu"
 msgstr ""
+"Гэты дадатак крэсьліць становішчы зорак з экзаплянэтамі. Зьвесткі пра "
+"экзаплянэты атрымоўваюцца з «Энцыкляпэдыі пазасонечных плянэт» («Extrasolar "
+"Planets Encyclopaedia») на exoplanet.eu"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:151
 msgid "Exoplanets configuration window"
@@ -6177,29 +6193,29 @@ msgstr ""
 #: plugins/Exoplanets/src/Exoplanet.cpp:173
 #: plugins/Exoplanets/src/Exoplanet.cpp:189
 msgid "Mass"
-msgstr ""
+msgstr "Маса"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:177
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
 msgid "Radius"
-msgstr ""
+msgstr "Радыюс"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:181
 #, qt-format
 msgid "Effective temperature: %1 K"
-msgstr ""
+msgstr "Эфэктыўная тэмпэратура: %1 K"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:187
 msgid "Exoplanet"
-msgstr ""
+msgstr "Экзаплянэта"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:188
 msgid "Period"
-msgstr ""
+msgstr "Пэрыяд"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:188
 msgid "days"
-msgstr ""
+msgstr "дзён"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:189
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
@@ -6208,7 +6224,7 @@ msgstr ""
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:191
 msgid "Semi-Major Axis"
-msgstr ""
+msgstr "Вялікая паўвось"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:191
 msgid "AU"
@@ -6216,19 +6232,19 @@ msgstr "а.а."
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:192
 msgid "Eccentricity"
-msgstr ""
+msgstr "Эксцэнтрысытэт"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:193
 msgid "Inclination"
-msgstr ""
+msgstr "Нахіл"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:194
 msgid "Angle Distance"
-msgstr ""
+msgstr "Вуглавая адлегласьць"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
-msgstr ""
+msgstr "Дадатак «Экзаплянэты»"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:110
 #, qt-format
@@ -6236,22 +6252,24 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from \"%1The Extrasolar Planets Encyclopaedia%2\""
 msgstr ""
+"Гэты дадатак крэсьліць становішчы зорак з экзаплянэтамі. Зьвесткі пра "
+"экзаплянэты атрымоўваюцца з «%1Энцыкляпэдыі пазасонечных плянэт%2»"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:183
 msgid "Exoplanets is updated"
-msgstr ""
+msgstr "Экзаплянэты абноўленыя"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:233
 msgid "Exoplanets Configuration"
-msgstr ""
+msgstr "Настаўленьні экзаплянэт"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:234
 msgid "Exoplanets Plug-in Configuration"
-msgstr ""
+msgstr "Настаўленьні дадатку «Экзаплянэты»"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:236
 msgid "Update exoplanets data from Internet"
-msgstr ""
+msgstr "Абнавіць зьвесткі пра экзаплянэты зь Сеціва"
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Экватарыяльная сетка"
